--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
